[package]
name = "loker"
description = "Self-hosted AWS secrets manager compatible server"
version = "0.2.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/loker"

[dependencies]
# Environment variables
dotenvy = "=0.15.7"

# HTTP server and utilities
axum = "=0.8.8"
axum-server = { version = "=0.8.0", features = ["tls-rustls"]}
http-body-util = "=0.1.3"
tower = { version = "=0.5.2" }
tower-http = { version = "=0.6.8", features = ["limit", "cors", "trace"] }

# Crypto provider
rustls = { version = "=0.23.35", features = ["aws-lc-rs"] }

# Async runtime and future utils
tokio = { version = "=1.48.0", features = ["full"] }
futures = "=0.3.31"

# Error helper
thiserror = "=2.0.17"

# Tracing
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }

# Bytes
bytes = "=1.11.0"

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.147"

# UUID v4
uuid = { version = "=1.19.0", features = ["v4", "serde"] }

# Database (With SLQCipher)
sqlx = { version = "=0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
libsqlite3-sys = { version ="=0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }

# Precise date and time implementation
chrono = { version = "=0.4.42", features = ["serde"] }

# Random generation
rand = "=0.9.2"

# Validation
garde = { version = "=0.22.1", features = ["derive"] }

# Background task scheduling
tokio-simple-fixed-scheduler = "=0.1.0"

# AWS SigV4 signing and credentials types
aws-sigv4 = "=1.3.7"
aws-credential-types = "=1.2.11"

[dev-dependencies]
aws-config = { version = "=1.8.12", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "=1.97.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
